test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-delete-source/00-sleep.yaml
# A pre-test sleep is needed here due to https://github.com/kudobuilder/kuttl/pull/422
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - command: sleep 3
