test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-delete-source/99-cleanup.yaml
# This clean-up stage is necessary because of https://github.com/nsathyaseelan/kyverno/issues/5101
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - command: kubectl delete ur -A --all
