test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-delete-source/policy.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: regcred
  namespace: default
type: Opaque
---
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-clone-sync-delete-source
spec:
  rules:
  - name: cpol-clone-sync-delete-source-secret
    match:
      any:
      - resources:
          kinds:
          - Namespace
    generate:
      apiVersion: v1
      kind: Secret
      name: regcred
      namespace: "{{request.object.metadata.name}}"
      synchronize: true
      clone:
        namespace: default
        name: regcred
---
